--- a/config.json
+++ b/config.json
@@ -1,27 +1,27 @@
 { 
-  "ownerNumber": "6281543342705@s.whatsapp.net",
-   "kontakOwner": "6281543342705",
-  "botName": "DIRLY-MD",
-  "ownerName": "  ",
+  "ownerNumber": "6281952806095@s.whatsapp.net",
+   "kontakOwner": "6281952806095",
+  "botName": "KASTARA X15",
+  "ownerName": "IyanSpecial",
   "sessionName": "session",
-  "foother": "᭖͜͡𝗗𝗜𝗥𝗥𝗢𝗡𝗘 𝗢𝗙𝗖 © 2023",
-  "judulGroup": "DirroneOfc〆",
+  "foother": "KASTARA X15 © 2K23",
+  "judulGroup": "KASTARA NEW GEN",
   "linkGroup": "https://chat.whatsapp.com/ILg7FNEViK89NKMpO25RiS",
   
-  "loginDi": "https://api.zeeoneofc.xyz",
-  "zeeonekey": "APIKEY LU",
+  "loginDi": "https://api.zeeoneofc.my.id",
+  "zeeonekey": "mSPTLek9RNfvbWr",
   
   "loginDi": "https://danzzapi.xyz",
   "danzz_api": "APIKEY LU",
   
 
- "dana": "085715932276",
- "ovo": "085715932276",
- "gopay": "085715932276",
- "saweria": "s.id/dirroneofc",
+ "dana": "085742344873",
+ "ovo": "Gapunya:)",
+ "gopay": "Gapunya:)",
+ "saweria": "Gada saweria",
  
- "packname": "Ytb Dirrone Ofc",
- "author": "Saya Dirly Sultra",
+ "packname": "Powered By",
+ "author": "Kastara X15",
 
   "logoMenu": "./media/thumbnail.jpg",
   "qrisNya": "./media/qris.jpg"
